src/views/_root_/_rooms_/game/styles/PlayerList.module.css
.root {
  display: "flex";
  flex-direction: "column";
  gap: 12px;
}

.player {
  padding: 8px;
}

.playerHead {
  padding-bottom: 4px;
  border-bottom: 1px solid var(--color-gray);
}

.isCurrent {
  composes: currentPlayerIndicator from "./lib/players.css";
  display: flex;
  align-items: center;
  border-bottom-color: var(--color-accent);
  color: var(--color-accent);
}

.isYou {
  margin-left: 0.3em;
  font-weight: bold;
}

.hand {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 8px 0 0;
}

.omitted {
  position: relative;
}

.omittedCount {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: grid;
  place-items: center;
  background-color: rgb(255 255 255 / 80%);
}

.drawnCard {
  animation-name: card-drawn;
  animation-duration: 0.5s;
}

@keyframes card-drawn {
  0% {
    opacity: 0;
    transform: translateX(100%);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.playedCards {
  display: grid;
  grid-template-columns: repeat(auto-fit, 6px);
  width: 50px;
  animation-name: cards-played;
  animation-duration: 0.6s;
  animation-fill-mode: forwards;
}

@keyframes cards-played {
  0% {
    opacity: 0;
    transform: translateX(20%);
  }

  40% {
    opacity: 0.8;
  }

  100% {
    opacity: 0;
    transform: translateX(100%);
  }
}

